--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -19,7 +19,10 @@
         }
         .leading {
             display: inline-block;
-            width: 100pt;
+            width: 50pt;
+        }
+        .section > div:not(.large-text) {
+            padding: 0 0 0 50pt;
         }
         /* ------------------------------------------------------ */
         .large-text {
@@ -31,8 +34,13 @@
         .underline {
             text-decoration: underline;
         }
-        [data-show="no"] {
+        [data-show] {
             display: none;
+            visibility: hidden;
+        }
+        [data-show="yes"] {
+            display: inline;
+            visibility: visible !important;
         }
         </style>
     </head>
