--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -9,15 +9,12 @@
             box-sizing: border-box;
         }
         html, body {
-            font-family: 'JetBrains Mono', 'Source Code Pro', 'Helvetica Neue', -apple-system, sans-serif, 'Noto Sans CJK CN';
-            /* font-family: 'Helvetica Neue', 'Source Code Pro', 'Helvetica Neue', -apple-system, sans-serif, 'Noto Sans CJK CN'; */
-            /* font-family: 'Menlo', 'Source Code Pro', 'Helvetica Neue', -apple-system, sans-serif, 'Noto Sans CJK CN'; */
-            /* font-family: 'Fira Mono', 'Source Code Pro', 'Helvetica Neue', -apple-system, sans-serif, 'Noto Sans CJK CN'; */
+            font-family: 'Roboto Mono', 'JetBrains Mono', 'Source Code Pro', 'Menlo', monospace, 'Noto Sans CJK CN';
             font-size: 20px;
             line-height: 1.3em;
         }
         .ff-sansserif {
-            font-family: -apple-system, 'SF Pro Text', 'Helvetica Neue', 'Source Code Pro', 'Helvetica Neue', -apple-system, sans-serif, 'PingFang SC', 'Noto Sans CJK CN';
+            font-family: -apple-system, 'SF Pro Text', 'Helvetica Neue', 'Source Code Pro', 'Helvetica Neue', -apple-system, sans-serif, 'PingFang SC', 'Noto Sans CJK SC';
         }
         .section {
             padding: 15px 0;
